--- a/demo/index.html
+++ b/demo/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../../paper-slider/paper-slider.html">
+    <script type="module">
+        import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+        import '@polymer/iron-demo-helpers/demo-snippet';
+        import '@polymer/paper-slider/paper-slider.js';
+    </script>
 
-    <link rel="import" href="../poly-graph.html">
+    <script type="module" src="../poly-graph.js"></script>
 
   </head>
   <body>
@@ -37,49 +39,48 @@
                         value="50" step="10" pin></paper-slider>
 
 
-          <script>
-            (function(){
-              var _demoData = function() {
-                var el = document.querySelector('poly-graph');
+          <script type="module">
+            import '../poly-graph.js';
+            var _demoData = function() {
+              var el = document.querySelector('poly-graph');
 
-                el.addGuide('max_guide', {min:0.8,height:0.1,name:"MAX",color:'#fdd'});
-                el.addGuide('zero_guide', {min:0,name:"ZERO"});
-                el.addGuide('min_guide', {min:-0.8,height:-0.1,name:"MIN",color:'#dfd'});
+              el.addGuide('max_guide', {min:0.8,height:0.1,name:"MAX",color:'#fdd'});
+              el.addGuide('zero_guide', {min:0,name:"ZERO"});
+              el.addGuide('min_guide', {min:-0.8,height:-0.1,name:"MIN",color:'#dfd'});
 
-                el.addPen('red', {color:'#d00', name:'DaRed', lineWidth:3});
-                el.addPen('green', {color:'#0d0', name:'DaGreen'});
-                el.addPen('blue', {color:'#00d', name:'DaBlue', dotsOnly:true});
-                var count1 = 0;
-                setInterval(function() {
-                  el.addValue('red', Math.sin(count1 * 0.1));
-                  count1++;
-                }, 50);
+              el.addPen('red', {color:'#d00', name:'DaRed', lineWidth:3});
+              el.addPen('green', {color:'#0d0', name:'DaGreen'});
+              el.addPen('blue', {color:'#00d', name:'DaBlue', dotsOnly:true});
+              var count1 = 0;
+              setInterval(function() {
+                el.addValue('red', Math.sin(count1 * 0.1));
+                count1++;
+              }, 50);
 
-                var count2 = 0;
-                setInterval(function() {
-                  el.addValue('green', Math.sin(count2 * 0.1));
-                  count2++;
-                }, 20);
+              var count2 = 0;
+              setInterval(function() {
+                el.addValue('green', Math.sin(count2 * 0.1));
+                count2++;
+              }, 20);
 
-                var count3 = 0;
-                setInterval(function() {
-                  el.addValue('blue', Math.sin(count2 * 0.02));
-                  count3++;
-                }, 300);
+              var count3 = 0;
+              setInterval(function() {
+                el.addValue('blue', Math.sin(count2 * 0.02));
+                count3++;
+              }, 300);
 
-                var resolution = document.querySelector('#resolution');
-                resolution.addEventListener('immediate-value-change', function() {
-                  // TODO: Maybe some fancy metrics overlay showing while in transition ;)
-                  el.resolution = resolution.immediateValue;
-                });
-                resolution.addEventListener('value-change', function() {
-                  el.resolution = resolution.value;
-                });
+              var resolution = document.querySelector('#resolution');
+              resolution.addEventListener('immediate-value-change', function() {
+                // TODO: Maybe some fancy metrics overlay showing while in transition ;)
+                el.resolution = resolution.immediateValue;
+              });
+              resolution.addEventListener('value-change', function() {
+                el.resolution = resolution.value;
+              });
 
-              }
+            };
 
-              setTimeout(_demoData, 100);  // HACK: let it settle (Edge, IE11)
-            })();
+            setTimeout(_demoData, 100);  // HACK: let it settle (Edge, IE11)
           </script>
         </template>
       </demo-snippet>
